1. Collection API Улучшения [#241049]