@@ -11,8 +11,8 @@ import static ru.job4j.collection.Departments.sortDesc;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         sortAsc(result);
         assertThat(result, is(expect));
@@ -20,8 +20,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed2() {
-        List<String> input = Arrays.asList("k1/sk1/ssk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k1/sk1/ssk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         sortAsc(result);
         assertThat(result, is(expect));
@@ -29,8 +29,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed3() {
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk2");
-        List<String> expect = Arrays.asList("k2", "k2/sk2", "k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1", "k2/sk2");
+        List<String> expect = List.of("k2", "k2/sk2", "k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         sortDesc(result);
         assertThat(result, is(expect));
@@ -38,8 +38,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         sortDesc(result);
         assertThat(result, is(expect));
